# RL-Kernel

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: auto-reviewer.yml  ci.yml
benchmarks/: benchmark_grpo_op.py  benchmark_sampling.py
csrc/: fused_logp_kernel.cu  ops.cpp
csrc/cuda/: fused_logp_sm90.cu
csrc/utils/: tma_utils.cuh
rl_engine/: _C.pyi
rl_engine/executors/: bridge.py  deepspeed_trainer.py  rollout.py  training_contract.py
rl_engine/kernels/: fused_ops.py  registry.py  sampling.py
rl_engine/kernels/ops/: cuda.py  pytorch.py
rl_engine/testing/: __init__.py  reference_ops.py  rl_batch.py
rl_engine/tests/: test_dispatch.py
rl_engine/utils/: logger.py
scripts/: run_perf.py
tests/: test_deepspeed_training_worker.py  test_op_accuracy.py
