[build-system]
requires = ["setuptools>=64", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "kernel-align"
version = "0.1.0"
description = "High-performance RL training engine focused on kernel fusion and memory efficiency."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "kernel-align Contributors"}
]
dependencies = [
    "torch>=2.4.1",
    "tabulate",
    "numpy",
    "accelerate",
    "transformers",
    "vllm>=0.6.0",
]

[project.optional-dependencies]
cuda = ["flashinfer>=0.1.6"]
rocm = ["aiter"]
dev = ["pytest", "black", "isort"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rl_engine*"]